RESOLVED FIXED49075
WebKit2 will load two copies of the same plugin, but should not
https://bugs.webkit.org/show_bug.cgi?id=49075
Summary WebKit2 will load two copies of the same plugin, but should not
Adam Roben (:aroben)
Reported 2010-11-05 10:27:10 PDT
WebKit2 will load two different versions of the same plugin. For example, if you have both Shockwave Director 10.3 and 11.5 installed, WebKit2 will load them both. But we should only load the newer one.
Attachments
Patch (2.23 KB, patch)
2011-04-13 14:32 PDT, Steve Falkenburg
no flags
Patch (2.03 KB, patch)
2011-04-13 15:07 PDT, Steve Falkenburg
aroben: review+
Adam Roben (:aroben)
Comment 1 2010-11-05 10:27:37 PDT
Adam Roben (:aroben)
Comment 2 2011-04-12 05:05:07 PDT
*** Bug 58276 has been marked as a duplicate of this bug. ***
Adam Roben (:aroben)
Comment 3 2011-04-12 05:11:23 PDT
*** Bug 58276 has been marked as a duplicate of this bug. ***
Steve Falkenburg
Comment 4 2011-04-13 12:17:02 PDT
Even if the plug-in is the same version, we can end up loading two copies if Windows path redirection comes into play (SysWOW64 vs. System32 for example).
Steve Falkenburg
Comment 5 2011-04-13 14:32:58 PDT
Steve Falkenburg
Comment 6 2011-04-13 14:38:30 PDT
Adam Roben (:aroben)
Comment 7 2011-04-13 14:44:55 PDT
Comment on attachment 89461 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=89461&action=review > Source/WebKit2/UIProcess/Plugins/win/PluginInfoStoreWin.cpp:396 > + String pluginPath = plugin.path; > + String pluginFileName(::PathFindFileNameW(pluginPath.charactersWithNullTermination())); You can use pathGetFileName from WebCore/FileSystem.h. > Source/WebKit2/UIProcess/Plugins/win/PluginInfoStoreWin.cpp:401 > + String loadedPluginFileName(::PathFindFileNameW(loadedPlugin.path.charactersWithNullTermination())); Ditto.
Steve Falkenburg
Comment 8 2011-04-13 15:07:22 PDT
Steve Falkenburg
Comment 9 2011-04-13 15:11:41 PDT
Note You need to log in before you can comment on or make changes to this bug.