2011-04-13  Steve Falkenburg  <sfalken@apple.com>

Reviewed by Oliver Hunt.

        WebKit2 will load two copies of the same plugin, but should not
        https://bugs.webkit.org/show_bug.cgi?id=49075
        <rdar://problem/8635947>

        * UIProcess/Plugins/win/PluginInfoStoreWin.cpp:
        (WebKit::PluginInfoStore::shouldUsePlugin): Don't use a plug-in if we've already allowed a plug-in with the same filename.


Canonical link: https://commits.webkit.org/73526@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@83769 268f45cc-cd09-0410-ab3c-d52691b4dbfc